# spotsync

./: .build.yml  .env.example  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  README.md  docker-compose.yml.example  readme.org  rustfmt.toml
src/: main.rs  save  tests.rs
