[package]
name = "spotsync"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aspotify = { version = "0.7" }
dotenv = { version = "0.15" }
log = { version = "0.4" }
fern = { version = "0.5" }
chrono = { version = "0.4" }
tokio = { version = "1", features = ["full"] }
ron = { version = "0.6" }
