[package]
name = "spotsync"
version = "0.2.0"
edition = "2021"
authors = ["Daniel Rose <danielrose@member.fsf.org>"]
description = "Sync your Spotify and local playlists."
homepage = "https://sr.ht/~thecatster/spotsync"
repository = "https://sr.ht/~thecatster/spotsync"
license = "GPL-3.0"
keywords = ["cli", "music", "docker"]
readme="README.md"

[dependencies]
aspotify = { version = "0.7" }
dotenv = { version = "0.15" }
log = { version = "0.4" }
fern = { version = "0.5" }
chrono = { version = "0.4" }
tokio = { version = "1", features = ["full"] }
ron = { version = "0.6" }
serde = { version = "1" }
itertools = { version = "0.10" }
anyhow = { version = "1" }
dirs = { version = "3.0" }